# examples

./: .gitignore  README.md  catalog.md  docker-compose.yml  package-lock.json  package.json  tsconfig-base.json
.github/workflows/: copy-to-repo.yml  pre-release.yml  release.yml  sync-java-api-and-pitfalls.yml  test.yml
.tools/: mlc_config.json  prepare_release_zip.sh  run_altjs_tests.sh  run_go_tests.sh  run_jvm_tests.sh  run_node_tests.sh  run_python_tests.sh  run_rust_tests.sh  update_cdk_examples.sh  update_go_examples.sh  update_jvm_examples.sh  update_node_examples.sh  update_python_examples.sh  update_restate.sh  update_rust_examples.sh
.tools/typescript_formatter/: .prettierignore  README.md  package.json
basics/basics-java/: README.md  build.gradle.kts
basics/basics-kotlin/: README.md  build.gradle.kts
go/: README.md
go/basics/: .gitignore  go.mod  (+2 more)
java/: README.md
kotlin/: README.md
lambda-greeter/: .prettierrc  package-lock.json  package.json  tsconfig.json
payment-api/: package-lock.json  package.json
python/: README.md
python/patterns-use-cases/: README.md  pyproject.toml  requirements.txt
python/patterns-use-cases/durablerpc/: app.py  client.py
python/patterns-use-cases/eventenrichment/: app.py
python/patterns-use-cases/eventtransactions/: app.py  utils.py
python/patterns-use-cases/parallelizework/: app.py  utils.py
python/patterns-use-cases/queue/: app.py  client.py
python/patterns-use-cases/queueing/: app.py  client.py
python/patterns-use-cases/sagas/: app.py
python/patterns-use-cases/sagas/activities/: car_rental_client.py  flight_client.py  payment_client.py
python/patterns-use-cases/sagas/clients/: car_rental_client.py  flight_client.py  hotel_client.py
python/patterns-use-cases/schedulingtasks/: app.py  utils.py
python/patterns-use-cases/signalspayments/: app.py  stripe_utils.py
python/patterns-use-cases/src/dataupload/: client.py  data_upload_service.py
python/patterns-use-cases/src/durablerpc/: client.py  product_service.py
python/patterns-use-cases/src/eventenrichment/: package_tracker.py
python/patterns-use-cases/src/eventtransactions/: user_feed.py  utils.py
python/patterns-use-cases/src/parallelizework/: fan_out_worker.py  utils.py
python/patterns-use-cases/src/queue/: async_task_worker.py  task_submitter.py
python/patterns-use-cases/src/sagas/: booking_workflow.py
python/patterns-use-cases/src/sagas/activities/: car_rental_service.py  car_rentals.py  flight_service.py  flights.py  payment_client.py
python/patterns-use-cases/src/schedulingtasks/: payment_tracker.py  utils.py
python/patterns-use-cases/src/signalspayments/: payment_service.py  stripe_utils.py
python/patterns-use-cases/src/statefulactors/: machine_operator.py  utils.py
python/patterns-use-cases/src/statemachinepayments/: accounts.py  data_types.py  payment_processor.py  types.py
python/patterns-use-cases/src/syncasync/: client.py  data_upload_service.py  utils.py
python/patterns-use-cases/statefulactors/: app.py  utils.py
python/patterns-use-cases/statemachinepayments/: accounts.py  app.py  payment_processor.py
python/patterns-use-cases/syncasync/: app.py  client.py  utils.py
python/templates/lambda/: .gitignore  README.md  greeter.py  handler.py  pyproject.toml
python/templates/lambda/.claude/: CLAUDE.md
python/templates/lambda/.github/workflows/: deploy.yml
python/templates/python/: Dockerfile  README.md  __main__.py  example.py  hypercorn-config.toml  pydantic_models.py  pyproject.toml  requirements.txt
python/templates/python/.claude/: CLAUDE.md
python/templates/python/.cursor/rules/: AGENTS.md  restate.mdc
python/templates/python/app/: greeter.py  utils.py
python/tutorials/tour-of-workflows-python/: README.md  __main__.py  client.py  pyproject.toml
python/tutorials/tour-of-workflows-python/app/: client.py  utils.py
python/tutorials/tour-of-workflows-python/app/workflows/: signup_with_activities.py  signup_with_events.py  signup_with_queries.py  signup_with_retries.py  signup_with_sagas.py  signup_with_signals.py  signup_with_timers.py  signup_workflow.py
rust/: README.md
rust/basics/: Cargo.toml  README.md
rust/basics/src/: main.rs  p0_durable_execution.rs  p1_building_blocks.rs  p2_virtual_objects.rs  p3_workflows.rs  stubs.rs
rust/basics/src/utils/: mod.rs  stubs.rs  subscription_service.rs
rust/templates/rust-shuttle/: .gitignore  Cargo.toml  README.md  Shuttle.toml
rust/templates/rust-shuttle/src/: main.rs
rust/tutorials/tour-of-restate-rust/: Cargo.toml
rust/tutorials/tour-of-restate-rust/src/app/: checkout_service.rs  main.rs
rust/tutorials/tour-of-restate-rust/src/auxiliary/: ticket_status.rs
rust/tutorials/tour-of-restate-rust/src/part1/: cart_object.rs
rust/tutorials/tour-of-restate-rust/src/part2/: cart_object.rs
rust/tutorials/tour-of-restate-rust/src/part3/: cart_object.rs  ticket_object.rs
rust/tutorials/tour-of-restate-rust/src/part4/: cart_object.rs  checkout_service.rs
scala/: README.md
scripts/: prepare_examples_zip.sh  prepare_release_zip.sh
templates/rust-shuttle/: Cargo.toml  README.md
templates/rust-shuttle/src/: main.rs  restate_shuttle.rs  utils.rs
ticket-reservation/: .eslintrc.js  README.md  package-lock.json  package.json
tutorials/tour-of-restate-rust/: .gitignore  Cargo.toml  README.md
tutorials/tour-of-restate-rust/src/: cart_object.rs  checkout_service.rs  main.rs  ticket_object.rs
tutorials/tour-of-restate-rust/src/app/: cart_object.rs  checkout_service.rs  ticket_object.rs
tutorials/tour-of-restate-rust/src/auxiliary/: email_client.rs  mod.rs  payment_client.rs  ticket_status.rs
tutorials/tour-of-restate-rust/src/part1/: cart_object.rs  checkout_service.rs  main.rs  ticket_object.rs
tutorials/tour-of-restate-rust/src/part2/: cart_object.rs  checkout_service.rs  ticket_object.rs
tutorials/tour-of-restate-rust/src/part3/: cart_object.rs  ticket_object.rs
tutorials/tour-of-restate-rust/src/part4/: cart_object.rs  checkout_service.rs  ticket_object.rs
typescript/: .npmrc  README.md  package-lock.json  package.json
(+2244 files in other folders)
