[project]
name = "restate-patterns-use-cases"
version = "0.1.0"
description = "Common tasks and patterns implemented with Restate"
authors = [
    {name = "Restate Team", email = "team@restate.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypercorn",
    "restate_sdk==0.11.0",
    "pydantic",
    "httpx",
    "stripe",
    "black",
]