[package]
name = "restate-shuttle-example"
version = "0.0.1"
edition = "2021"

[dependencies]
restate-sdk = "0.2"
tokio = "1"
shuttle-runtime = "0.47.0"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1.7", features = ["http1", "server", "server-graceful"] }
tracing = "0.1"
