[project]
name = "tour-of-workflows-python"
version = "0.1.0"
description = "Restate SDK Tour of Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypercorn>=0.17.3",
    "pydantic>=2.10.6",
    "httpx",
    "restate-sdk[serde]>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
