[package]
name = "restate-shuttle-example"
version = "0.0.1"
edition = "2021"

[dependencies]
restate-sdk = "0.4.0"
tokio = "1"
shuttle-runtime = "0.47.0"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1.7", features = ["http1", "server", "server-graceful"] }
tracing = "0.1"
rand = "0.8.5"
anyhow = "1.0.86"
