[package]
name = "restate-example"
version = "0.0.1"
edition = "2021"

[dependencies]
restate-sdk = "0.4.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
log = "0.4.22"

[[bin]]
name = "app"
path = "src/app/main.rs"

[[bin]]
name = "part1"
path = "src/part1/main.rs"

[[bin]]
name = "part2"
path = "src/part2/main.rs"

[[bin]]
name = "part3"
path = "src/part3/main.rs"

[[bin]]
name = "part4"
path = "src/part4/main.rs"
